# netbridge

./: .gitignore  LICENSE  README.md
.github/workflows/: ci.yml  release-agent.yml  release-relay.yml  release-socks-exe.yml  release-socks.yml
deploy/: Dockerfile.netbridge  netbridge-socks.service
docs/: SECURITY_REVIEW_2026-05-21.md  plan-restart-and-remote-exec.md
docs/superpowers/plans/: 2026-05-19-cli-rename-and-plugin-system.md  2026-05-19-remote-exec-intercept.md
netbridge-agent/: entry.py  launcher.py  netbridge-agent.spec  netbridge-debug.spec  netbridge.spec  netbridge_entry.py  pyproject.toml
netbridge-agent/scripts/: build.ps1
netbridge-agent/src/netbridge_agent/: __init__.py  __main__.py  agent.py  app.py  auth.py  config.py  credstore.py  dialogs.py  installer.py  intercept.py  keepalive.py  legacy.py  plugin_loader.py  remote_exec.py  tray.py  tunnel.py  winauth.py  winproxy.py
netbridge-agent/tests/: conftest.py  test_agent.py  test_config.py  test_installer.py  test_intercept.py  test_legacy.py  test_plugin_loader.py  test_remote_exec.py  test_tunnel.py  test_winauth.py  test_winproxy.py
relay/: pyproject.toml
relay/src/relay/: __init__.py  __main__.py  auth.py
relay/tests/: test_destinations.py  test_relay.py
security-tests/: pentest_suite.py  pyproject.toml
shared/: pyproject.toml
shared/src/shared_auth/: __init__.py  connection.py  session.py  token.py  validate.py
shared/tests/: conftest.py  test_connection.py  test_session.py  test_token.py  test_validate.py
socks-proxy/: pyproject.toml
socks-proxy-win/: entry.py  netbridge-socks.spec  pyproject.toml
socks-proxy-win/src/socks_proxy_win/: __init__.py  __main__.py  app.py  config.py  dialogs.py  installer.py  tray.py
socks-proxy-win/tests/: test___main__.py  test_app.py  test_config.py  test_installer.py  test_tray.py
socks-proxy/src/socks_proxy/: __init__.py  __main__.py  auth.py  http_proxy.py  plugin_cli.py  socks5.py  stream.py  tunnel.py
socks-proxy/tests/: test_http_proxy.py  test_main.py  test_plugin_cli.py  test_socks5.py  test_stream.py  test_tunnel.py
