[project]
name = "netbridge-relay"
version = "0.1.0"
description = "NetBridge relay server - bridges laptop requests to agent"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "pyyaml>=6.0",
    "aiolimiter>=1.1.0",
    "shared-auth",
]

[tool.uv.sources]
shared-auth = { path = "../shared" }

[project.scripts]
netbridge-relay = "relay.__main__:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
