[project]
name = "shared-auth"
version = "0.1.0"
description = "Shared authentication for NetBridge using Azure CLI credentials"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.27.0",
    "cryptography>=42.0.0",
    "aiohttp>=3.9.0",
]

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
